end work with timer

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -64,6 +64,10 @@ button {
   letter-spacing: 0.04em;
   color: #989898;
 }
+button:active {
+  background: #6C8CFF;
+  color: #ffffff;
+}
 .timer {
   display: flex;
   margin-left: 156px;
