--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -18,12 +18,12 @@
 @import url('./footer.css');
 
 
-input,
+#datetime-picker,
 button {
   display: inline-block;
   align-items: center;
 }
-input {
+#datetime-picker {
   justify-content: flex-start;
   width: 272px;
   height: 40px;
@@ -40,13 +40,13 @@ input {
   color: #2e2f42;
   padding-left: 16px;
 } 
-input:hover{
+#datetime-picker:hover{
   border-color: #000000;
 }
-input:active {
+#datetime-picker:active {
   border-color: #4E75FF;
 }
-input:disable {
+#datetime-picker:disable {
   color: #808080;
   background-color: #FAFAFA;
 } 
@@ -91,4 +91,52 @@ button:active {
   font-size: 16px;
   line-height: 1.5;
 
+}
+#name >
+label {
+  display: flex;
+  flex-direction: column;
+  width: 360px;
+  }
+
+#delay {
+  display: flex;
+  flex-direction: column;
+  border: 1px solid #808080;
+  border-radius: 4px;
+  width: 360px;
+  height: 40px;
+  
+}
+.form {
+  display: flex;
+  flex-direction: column;
+  margin-left: 156px;
+}
+fieldset {
+  width: 360px;
+  height: 64px;
+  align-items: center;
+  justify-content: space-between;
+  border-radius: 4px;
+  border: 1px solid #808080;
+  
+}
+.btn-radio {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+  border-radius: 8px;
+  padding: 8px 16px;
+  gap: 10px;
+  margin-top: 16px;
+  width: 360px;
+  background: #4e75ff;
+  font-family: var(--font-family);
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: #fff;
 }
