--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -99,7 +99,7 @@ label {
   width: 360px;
   }
 
-#delay {
+input[name="delay"] {
   display: flex;
   flex-direction: column;
   border: 1px solid #808080;
@@ -120,7 +120,14 @@ fieldset {
   justify-content: space-between;
   border-radius: 4px;
   border: 1px solid #808080;
-  
+  padding: 0;  
+}
+legend {
+  margin-left: 28px;
+}
+input[name="state"] {
+  margin-left: 24px;
+  margin-top: 8px;
 }
 .btn-radio {
   display: flex;
